kubernetes/apps/openwebui/openwebui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: default # Ensure or change to default namespace
spec:
  selector:
    app: openwebui
  ports:
  - protocol: TCP
    port: 3030 # External port
    targetPort: 8080 # Container port
  type: ClusterIP
